# haskell-heroku-docker

./: .gitignore  Dockerfile.build  Dockerfile.dist  Main.hs  README.md  docker-compose.yml  haskell-heroku-docker.cabal
src/: App.hs  Incrementer.hs
